<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".AddList">

    <Button
        android:id="@+id/create_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="createDatabase"
        android:text="@string/create_db" />

    <TextView
        android:id="@+id/write_name_of_your_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_db"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/polecenie" />


    <EditText
        android:id="@+id/edit_text_name_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/write_name_of_your_list"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/name_of_list"
        android:inputType="text" />


    <EditText
        android:id="@+id/edit_text_name_list_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_name_list"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/list_type"
        android:inputType="text" />

    <Button
        android:id="@+id/create_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_name_list_type"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:onClick="insertListIntoDatabase"
        android:text="@string/add_to_db" />

    <Button
        android:id="@+id/show_lists_from_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_list"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:text="@string/show_from_db" />


    <TextView
        android:id="@+id/insertedLists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_lists_from_db"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/next" />

</RelativeLayout>