<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".AddIngriedients">

    <TextView
        android:id="@+id/text_view_polecenie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text= "@string/polecenie_ing" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pick_a_name_of_list"
        android:text="@string/pick_a_name_of_list"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_view_polecenie"/>

    <EditText
        android:id="@+id/edit_text_ingriedient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingriedient"
        android:inputType="text"
        android:layout_below="@id/spinner" />
    <EditText
        android:id="@+id/edit_text_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="number"
        android:layout_below="@+id/edit_text_ingriedient" />
    <Button
        android:id="@+id/add_to_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_db"
        android:layout_below="@+id/edit_text_amount"
        android:onClick="insertIngriedientsIntoDatabase"/>
    <!--    <Button-->
    <!--        android:id="@+id/add_to_db"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/add_to_db"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/edit_text_amount"/>-->

    <Button
        android:id="@+id/show_from_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_ingr_from_db"
        android:layout_below="@+id/add_to_db" />

    <ScrollView
        android:id="@+id/show_from_db_tw_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_from_db">

        <TextView
            android:id="@+id/show_from_db_tw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/show_from_db" />

    </ScrollView>


</RelativeLayout>